--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,13 @@
-<p>sidebar works!</p>
+<h2>Template</h2>
+
+<hr>
+
+<ul class="nav nav-pills flex-column">
+	<li *ngFor="let item of menu" class="nav-item">
+		<a class="nav-link" 
+			[routerLink]="item.route"
+			routerLinkActive="active">
+			{{ item.text }}
+		</a>
+	</li>
+</ul>
