--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,23 @@
 <hr>
 
 <ul class="nav nav-pills flex-column">
-	<li *ngFor="let item of menu" class="nav-item">
+	<li *ngFor="let item of templateMenu" class="nav-item">
+		<a class="nav-link" 
+			[routerLink]="item.route"
+			routerLinkActive="active">
+			{{ item.text }}
+		</a>
+	</li>
+</ul>
+
+<hr>
+
+<h2>Reactive</h2>
+
+<hr>
+
+<ul class="nav nav-pills flex-column">
+	<li *ngFor="let item of reactiveMenu" class="nav-item">
 		<a class="nav-link" 
 			[routerLink]="item.route"
 			routerLinkActive="active">
