add container for sidebar

--- a/src/app/template/basics/basics.component.html
+++ b/src/app/template/basics/basics.component.html
@@ -1,1 +1,28 @@
-<p>basics works!</p>
+<h2>Template Basics</h2>
+<hr>
+
+<div class="row w-50">
+	<div class="col">
+		<form>
+			<div class="form-group mb-2">
+				<label> Product </label>
+				<input type="text" 
+							class="form-control"
+							placeholder="product name">
+				<span class="form-text text-danger"> Product name must have 3 words minimum. </span>
+			</div>
+
+			<div class="form-group mb-2">
+				<label> Price </label>
+				<input type="number" class="form-control">
+			</div>
+
+			<div class="form-group mb-2">
+				<label> Stock </label>
+				<input type="number" class="form-control">
+			</div>
+
+			<button type="submit" class="btn btn-primary mt-3"> Save </button>
+		</form>
+	</div>
+</div>
