--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,29 +1,32 @@
-<h2>Template</h2>
 
-<hr>
-
-<ul class="nav nav-pills flex-column">
-	<li *ngFor="let item of templateMenu" class="nav-item">
-		<a class="nav-link" 
-			[routerLink]="item.route"
-			routerLinkActive="active">
-			{{ item.text }}
-		</a>
-	</li>
-</ul>
-
-<hr>
-
-<h2>Reactive</h2>
-
-<hr>
-
-<ul class="nav nav-pills flex-column">
-	<li *ngFor="let item of reactiveMenu" class="nav-item">
-		<a class="nav-link" 
-			[routerLink]="item.route"
-			routerLinkActive="active">
-			{{ item.text }}
-		</a>
-	</li>
-</ul>
+<div class="w-50">
+	<h2>Template</h2>
+	
+	<hr>
+	
+	<ul class="nav nav-pills flex-column">
+		<li *ngFor="let item of templateMenu" class="nav-item">
+			<a class="nav-link" 
+				[routerLink]="item.route"
+				routerLinkActive="active">
+				{{ item.text }}
+			</a>
+		</li>
+	</ul>
+	
+	<hr>
+	
+	<h2>Reactive</h2>
+	
+	<hr>
+	
+	<ul class="nav nav-pills flex-column">
+		<li *ngFor="let item of reactiveMenu" class="nav-item">
+			<a class="nav-link" 
+				[routerLink]="item.route"
+				routerLinkActive="active">
+				{{ item.text }}
+			</a>
+		</li>
+	</ul>
+</div>
