--- a/src/app/template/basics/basics.component.html
+++ b/src/app/template/basics/basics.component.html
@@ -13,7 +13,8 @@
 						class="form-control"
 						ngModel
 						name="product"
-						placeholder="product name">
+						placeholder="product name"
+						required>
 				<span class="form-text text-danger"> Product name must have 3 words minimum. </span>
 			</div>
 
@@ -23,7 +24,8 @@
 						class="form-control"
 						ngModel
 						name="price"
-						placeholder="product price">
+						placeholder="product price"
+						required>
 			</div>
 
 			<div class="form-group mb-2">
@@ -32,7 +34,8 @@
 						class="form-control"
 						ngModel
 						name="stock"
-						placeholder="stock">
+						placeholder="stock"
+						required>
 			</div>
 
 			<button type="submit" class="btn btn-primary mt-3"> Save </button>
