--- a/src/app/template/basics/basics.component.html
+++ b/src/app/template/basics/basics.component.html
@@ -14,8 +14,12 @@
 						ngModel
 						name="product"
 						placeholder="product name"
-						required>
-				<span class="form-text text-danger"> Product name must have 3 words minimum. </span>
+						required
+						minlength="3">
+				<span class="form-text text-danger"
+						*ngIf="myForm.controls.product?.touched && myForm.controls.product?.invalid"> 
+					Product name must have 3 words minimum. 
+				</span>
 			</div>
 
 			<div class="form-group mb-2">
@@ -48,6 +52,16 @@
 	<div class="col">
 		<span>valid</span>
 		<pre> {{ myForm.valid }} </pre>
+	</div>
+
+	<div class="col">
+		<span>pristine</span>
+		<pre> {{ myForm.pristine }} </pre>
+	</div>
+
+	<div class="col">
+		<span>touched</span>
+		<pre> {{ myForm.touched }} </pre>
 	</div>
 
 	<div class="col">
