--- a/src/app/template/basics/basics.component.html
+++ b/src/app/template/basics/basics.component.html
@@ -18,7 +18,7 @@
 						minlength="3">
 
 				<span 	class="form-text text-danger"
-						*ngIf="productNameValid()"> 
+						*ngIf="productNameValidation()"> 
 					Product name must have 3 words minimum. 
 				</span>
 			</div>
@@ -30,7 +30,12 @@
 						ngModel
 						name="price"
 						placeholder="product price"
+						minlength="0"
 						required>
+				<span 	class="form-text text-danger"
+						*ngIf="priceValidation()"> 
+					The price is required. 
+				</span>
 			</div>
 
 			<div class="form-group mb-2">
@@ -43,7 +48,11 @@
 						required>
 			</div>
 
-			<button type="submit" class="btn btn-primary mt-3"> Save </button>
+			<button type="submit" 
+					class="btn btn-primary mt-3"
+					[disabled]="myForm.invalid"> 
+					Save 
+			</button>
 
 		</form>
 	</div>
