--- a/src/app/template/dynamics/dynamics.component.html
+++ b/src/app/template/dynamics/dynamics.component.html
@@ -20,20 +20,36 @@
 			<div class="form-group mb-2">
 				<label> Add </label>
 				<div class="input-group mb-3">
-					<input type="text" class="form-control" placeholder="Add favorite">
+					<input 	type="text" 
+							class="form-control" 
+							placeholder="Add favorite"
+							[(ngModel)]="newFavorite"
+							name="newFavorite"
+							(keyup.enter)="addFavorite()">
 					<div class="input-group-append">
-					  <button class="btn btn-outline-primary" type="button">Button</button>
+					  <button 	class="btn btn-outline-primary" 
+					  			type="button"
+								(click)="addFavorite()">
+								Add
+						</button>
 					</div>
 				</div>
 			</div>
 
 			<div class="mb-3 row">
-				<label for=""> Favorites </label>
+				<label> Favorites </label>
 				<div class="col-sm-9">
-					<input 	*ngFor="let game of person.favorites; let i = index" 
-							[(ngModel)]="game.name"
-							[name]="'favorite_' + i"
-							class="form-control mb-1">
+					<div class="input-group mb-1"
+						*ngFor="let game of person.favorites; let i = index">
+						<input 	[(ngModel)]="game.name"
+								[name]="'favorite_' + i"
+								class="form-control mb-1">
+						<button class="btn btn-outline-danger" 
+								type="button"
+								(click)="deleteFavorite(i)"> 
+								Delete 
+						</button>
+					</div>
 				</div>
 			</div>
 
