--- a/src/app/reactive/dynamics/dynamics.component.html
+++ b/src/app/reactive/dynamics/dynamics.component.html
@@ -1,1 +1,50 @@
-<p>dynamics works!</p>
+<h2>Reactive Dynamics</h2>
+<hr>
+
+<div class="row w-50">
+	<div class="col">
+		<form autocomplete="off">
+			<div class="form-group mb-2">
+				<label> Name </label>
+				<input 	type="text" 
+						class="form-control"
+						placeholder="name">
+			</div>
+			<span class="text-danger"> The name is required. </span>
+			
+			<div class="form-group mb-2">
+				<label> Add </label>
+				<div class="input-group mb-3">
+					<input 	type="text" 
+							class="form-control" 
+							placeholder="Add favorite">
+					<div class="input-group-append">
+					  <button 	class="btn btn-outline-primary" 
+					  			type="button">
+								Add
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="mb-3">
+				<label class="col col-form-label"> Favorites </label>
+				<div class="col">
+					<div class="input-group mb-1">
+						<input 	class="form-control mb-1">
+						<button class="btn btn-outline-danger" 
+								type="button"> 
+								Delete 
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<button type="submit" 
+					class="btn btn-primary mt-3"> 
+					Save 
+			</button>
+
+		</form>
+	</div>
+</div>
