--- a/src/app/reactive/basics/basics.component.html
+++ b/src/app/reactive/basics/basics.component.html
@@ -38,7 +38,8 @@
 			</div>
 
 			<button type="submit" 
-					class="btn btn-primary mt-3"> 
+					class="btn btn-primary mt-3"
+					[disabled]="myForm.invalid"> 
 					Save 
 			</button>
 
