--- a/src/app/reactive/basics/basics.component.html
+++ b/src/app/reactive/basics/basics.component.html
@@ -46,7 +46,7 @@
 
 			<button type="submit" 
 					class="btn btn-primary mt-3"
-					[disabled]="myForm.invalid"> 
+					(click)="save()"> 
 					Save 
 			</button>
 
