--- a/src/app/reactive/dynamics/dynamics.component.html
+++ b/src/app/reactive/dynamics/dynamics.component.html
@@ -3,14 +3,16 @@
 
 <div class="row w-50">
 	<div class="col">
-		<form autocomplete="off">
+		<form [formGroup]="myForm" autocomplete="off">
 			<div class="form-group mb-2">
 				<label> Name </label>
 				<input 	type="text" 
 						class="form-control"
+						formControlName="name"
 						placeholder="name">
 			</div>
-			<span class="text-danger"> The name is required. </span>
+			<span *ngIf="isInvalid('name')" 
+				  class="text-danger"> The name must have minimum 4 characters. </span>
 			
 			<div class="form-group mb-2">
 				<label> Add </label>
@@ -41,7 +43,8 @@
 			</div>
 
 			<button type="submit" 
-					class="btn btn-primary mt-3"> 
+					class="btn btn-primary mt-3"
+					(click)="save()"> 
 					Save 
 			</button>
 
