--- a/src/app/reactive/dynamics/dynamics.component.html
+++ b/src/app/reactive/dynamics/dynamics.component.html
@@ -21,7 +21,7 @@
 							class="form-control" 
 							placeholder="Add favorite">
 					<div class="input-group-append">
-					  	<button class="btn btn-outline-primary" 
+					  	<button class="btn btn-outline-primary mx-1" 
 					  			type="button">
 								Add
 						</button>
@@ -30,13 +30,13 @@
 			</div>
 
 			<div class="mb-3">
-				<label class="col col-form-label"> Favorites </label>
-				<div class="col">
-					<div class="input-group mb-1">
-						<input 	class="form-control mb-1">
-						<button class="btn btn-outline-danger" 
+				<label> Favorites </label>
+				<div class="input-group">
+					<div class="input-group-append mb-1">
+						<input 	class="form-control">
+						<button class="btn btn-outline-danger mx-1" 
 								type="button"> 
-								Delete 
+								Del 
 						</button>
 					</div>
 				</div>
