--- a/src/app/reactive/dynamics/dynamics.component.html
+++ b/src/app/reactive/dynamics/dynamics.component.html
@@ -6,10 +6,10 @@
 		<form [formGroup]="myForm" autocomplete="off">
 			<div class="form-group mb-2">
 				<label> Name </label>
-				<input 	type="text" 
-						class="form-control"
-						formControlName="name"
-						placeholder="name">
+				<input type="text" 
+					   class="form-control"
+					   formControlName="name"
+					   placeholder="name">
 			</div>
 			<span *ngIf="isInvalid('name')" 
 				  class="text-danger"> The name must have minimum 4 characters. </span>
@@ -20,7 +20,8 @@
 					<input type="text" 
 						   class="form-control" 
 						   placeholder="Add favorite"
-						   [formControl]="add">
+						   [formControl]="add"
+						   (keyup.enter)="addFavorite()">
 					<div class="input-group-append">
 					  	<button class="btn btn-outline-primary mx-1" 
 					  			type="button"
@@ -37,30 +38,20 @@
 					<div *ngFor="let favorite of favoritesFormArray.controls; let i = index" class="input-group-append mb-1">
 						<input [formControlName]="i" class="form-control">
 						<button class="btn btn-outline-danger mx-1" 
-								type="button"> 
-								Del 
+								type="button"
+								(click)="deleteFavorite(i)"> 
+							Del 
 						</button>
 					</div>
 				</div>
 			</div>
 
-			<button type="submit" 
+			<button type="button" 
 					class="btn btn-primary mt-3"
 					(click)="save()"> 
 					Save 
 			</button>
 
 		</form>
-	</div>
-</div>
-
-<div class="">
-	<div class="">
-		valid
-		{{ myForm.valid | json }}
-	</div>
-	<div class="">
-		value
-		{{ myForm.value | json }}
 	</div>
 </div>
